FIX: Refactored gifts subheading for readability and usability

--- a/src/pages/Gifts/Gifts.scss
+++ b/src/pages/Gifts/Gifts.scss
@@ -3,19 +3,21 @@
   width: 100vw;
   position: fixed;
   z-index: -1;
-  margin-top: 100px;
+  // margin-top: 100px;
 
   &__subheader {
-    max-width: 800px;
+    // max-width: 800px;
     text-transform: none !important;
     padding: 0 1rem;
-    
+    p {
+      max-width: 70vw;
+    }
   }
 
   &__content {
     // padding-top: 70vh;
     // padding-top: 700px;
-    transform: translateY(700px);
+    transform: translateY(600px);
     padding-bottom: 700px;
   }
 }
@@ -23,6 +25,7 @@
 @media screen and (max-width: 768px) {
   .gifts {
     min-height: 50vh;
+    margin-top: 100px;
     
     // padding-top: 200px;
     &__subheader {
@@ -31,7 +34,7 @@
 
     &__content {
       transform: translateY(20vh);
-      padding-top: 40vh;
+      padding-top: 250px;
       padding-bottom: 500px;
     }
   }
